--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p>Hello,Good to see you<p>
 <p>This is my personal Website<p>
-<p>You can find me in the following website<p>
+<p>You can find me in the following website.<p>
 
 <ul>
   <li> <a href="https://www.linkedin.com/in/tokai/">Linkedin</a> </li>
